[tool.poetry]
name = "berry-integration"
version = "0.1.0"
description = "BerryMed Python integration for windows"
authors = ["Alejandro Brunacci <ABrunacci87@gmail.com>"]
license = "GNU GPLv3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
bleak = "^0.22.3"
websockets = "^14.1"
python-dotenv = "^1.0.1"
pusher = "^3.3.2"
pyinstaller = "^6.11.1"
pysher = "^1.0.8"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
