[tool.poetry]
name = "berry-integration"
version = "0.1.0"
description = "BerryMed Python integration for windows"
authors = ["Alejandro Brunacci <ABrunacci87@gmail.com>"]
license = "GNU GPLv3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
bleak = "^0.22.3"
pyinstaller = "^6.11.1"
pysher = "^1.0.8"
certifi = "^2024.8.30"
aiohttp = "^3.11.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
